dataset1235/2025-2/1153765216/users/2357208246/executions/2747719322_2383239197.log
== RUN (2025-08-19 18:06:03)
-- CODE: 
import math
dist_a = float(input())
dist_b = float(input())
angulo_ab = radians(float(input()))

dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
print(round(dist_ab,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo_ab = radians(float(input()))
                ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo_ab = radians(float(input()))
                ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo_ab = radians(float(input()))
                ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo_ab = radians(float(input()))
                ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo_ab = radians(float(input()))
                ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angulo_ab = radians(float(input()))
                ^^^^^^^
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:07:52)
-- CODE: 
import math
dist_a = float(input())
dist_b = float(input())
angulo_ab = float(input())

dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
print(round(dist_ab,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
                                         ^
NameError: name 'a' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
                                         ^
NameError: name 'a' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
                                         ^
NameError: name 'a' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
                                         ^
NameError: name 'a' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
                                         ^
NameError: name 'a' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
                                         ^
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:09:29)
-- CODE: 
import math
dist_a = float(input())
dist_b = float(input())
angulo_ab = math.radians(float(input()))

dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * math.cos(angulo_ab))**(1/2)
print(round(dist_ab,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:08:21)
-- CODE: 
import math
dist_a = float(input())
dist_b = float(input())
angulo_ab = float(input())

dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * cos(angulo_ab))**(1/2)
print(round(dist_ab,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * cos(angulo_ab))**(1/2)
                                                           ^^^
NameError: name 'cos' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * cos(angulo_ab))**(1/2)
                                                           ^^^
NameError: name 'cos' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * cos(angulo_ab))**(1/2)
                                                           ^^^
NameError: name 'cos' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * cos(angulo_ab))**(1/2)
                                                           ^^^
NameError: name 'cos' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * cos(angulo_ab))**(1/2)
                                                           ^^^
NameError: name 'cos' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * cos(angulo_ab))**(1/2)
                                                           ^^^
NameError: name 'cos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 18:06:59)
-- CODE: 
import math
dist_a = float(input())
dist_b = float(input())
angulo_ab = float(input())
ang_ab_rad = radians(angulo_ab)

dist_ab = (dist_a**2 + dist_b**2 - 2*a*b * cos(angulo_ab))**(1/2)
print(round(dist_ab,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang_ab_rad = radians(angulo_ab)
                 ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang_ab_rad = radians(angulo_ab)
                 ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang_ab_rad = radians(angulo_ab)
                 ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang_ab_rad = radians(angulo_ab)
                 ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang_ab_rad = radians(angulo_ab)
                 ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ang_ab_rad = radians(angulo_ab)
                 ^^^^^^^
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:09:43)
-- CODE: 
import math
dist_a = float(input())
dist_b = float(input())
angulo_ab = math.radians(float(input()))

dist_ab = (dist_a**2 + dist_b**2 - 2* dist_a* dist_b * math.cos(angulo_ab))**(1/2)
print(round(dist_ab,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
